2003-03-14  Alexandre Oliva  <aoliva@redhat.com>

	* elf/dl-conflict.c: Don't compile _dl_resolve_conflicts if
	ELF_MACHINE_NO_RELA is set.
	* elf/rtld.c (dl_main): No prelink support for REL-only.

	* sysdeps/generic/ldconfig.h (FLAG_MIPS64_LIBN32,
	FLAG_MIPS64_LIBN64): Define.
	* elf/cache.c (print_entry): Handle mips64 n32 and n64.

	* sysdeps/mips/memcpy.S: Map t0-3 to a4-7 on new abis.
	* sysdeps/mips/memset.S: Likewise.
	* sysdeps/mips/sys/regdef.h: Alias a4-7 or t0-3 to $8-11
	depending on the ABI.

	* sysdeps/mips/atomicity.h (exchange_and_add, atomic_add):
	Don't .set mips2 on new abi.
	(compare_and_swap): Likewise.  Support 64-bit longs on n64.

	* stdlib/fpioconst.h: Include gmp.h with angle brackets.

2003-03-13  Roland McGrath  <roland@redhat.com>

	* elf/dl-load.c (_dl_map_object_from_fd): Bail if no PT_LOAD phdrs
	found.  Reported by Alexandre Oliva <aoliva@redhat.com>.

2003-03-13  Alexandre Oliva  <aoliva@redhat.com>

	* stdio-common/_itoa.c (_itoa_base_table): Make 64-bit
	literals long long.
	* stdlib/fpioconst.c: Likewise.
	* stdlib/strtod.c: Likewise.

	* sysdeps/mips/add_n.S: Use L macro for local labels.
	* sysdeps/mips/addmul_1.S: Likewise.
	* sysdeps/mips/lshift.S: Likewise.
	* sysdeps/mips/memcpy.S: Likewise.
	* sysdeps/mips/memset.S: Likewise.
	* sysdeps/mips/mul_1.S: Likewise.
	* sysdeps/mips/rshift.S: Likewise.
	* sysdeps/mips/sub_n.S: Likewise.
	* sysdeps/mips/submul_1.S: Likewise.
	* sysdeps/mips/mips64/add_n.S: Likewise.
	* sysdeps/mips/mips64/addmul_1.S: Likewise.
	* sysdeps/mips/mips64/lshift.S: Likewise.
	* sysdeps/mips/mips64/mul_1.S: Likewise.
	* sysdeps/mips/mips64/rshift.S: Likewise.
	* sysdeps/mips/mips64/sub_n.S: Likewise.
	* sysdeps/mips/mips64/submul_1.S: Likewise.
	* sysdeps/unix/mips/sysdep.h: Define L() according to ABI
	conventions.  Define END as in sys/asm.h.
	* sysdeps/unix/mips/sysdep.S: Likewise.
	* sysdeps/unix/mips/wait.S: Likewise.
	* sysdeps/unix/sysv/linux/mips/clone.S: Likewise.
